* debian/dash.templates.in: don't mention 'distribution policy' or     'Debian policy' at all, but talk only about POSIX-compliance; run     debconf-updatepo (closes: #455550).

--- a/debian/dash.templates.in
+++ b/debian/dash.templates.in
@@ -12,7 +12,6 @@ Default: false
 _Description: Install dash as /bin/sh?
  The default /bin/sh shell on Debian and Debian-based systems is bash.
  .
- However, since the distribution policy requires all shell scripts
- using /bin/sh to be POSIX compliant, any shell that conforms to
- POSIX, such as dash, can serve as /bin/sh. You may wish to do this
- because dash is faster and smaller than bash.
+ However, since the default shell is required to be POSIX-compliant,
+ any shell that conforms to POSIX, such as dash, can serve as /bin/sh.
+ You may wish to do this because dash is faster and smaller than bash.
