--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Gerrit Pape <pape@smarden.org>
 Build-Depends: po-debconf
 Standards-Version: 3.7.3.0
+Homepage: http://gondor.apana.org.au/~herbert/dash/
 Vcs-Git: http://smarden.org/git/dash.git/
 
 Package: dash
