dash (0.5.5.1-2.1) unstable; urgency=high
  * Non-maintainer upload.
  * Depend on debian-utils (Closes: #537990).

 -- Luk Claes <luk@debian.org>  Wed, 22 Jul 2009 18:50:45 +0000

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Vcs-Git: http://smarden.org/git/dash.git/
 Package: dash
 Architecture: any
 Pre-Depends: ${shlibs:Depends}
+Depends: debianutils (>= 2.15)
 Description: POSIX-compliant shell
  The Debian Almquist Shell (dash) is a lightweight POSIX-compliant shell
  derived from ash.
