dash (0.5.5.1-2.2) unstable; urgency=low
  [ Luk Claes ]
  * Non-maintainer upload with maintainer's permission.
  * Change the default for the system shell to dash.
  * Ship /bin/sh in the package and fix the diversion handling
    for it to make sure /bin/sh is always present.
  * Set debconf priority to high when upgrading from an existing
    system.
  * Add versioned dpkg dependency for dpkg-divert --listpackage.
  * Add NEWS file about changing /bin/sh.
  * Adjusted the debconf template accordingly.
  * Make dash Priority: Required

  [ Raphael Geissert ]
  * Make dash Essential: yes

 -- Luk Claes <luk@debian.org>  Wed, 22 Jul 2009 20:17:31 +0200

--- a/debian/rules
+++ b/debian/rules
@@ -71,9 +71,11 @@ install-arch: deb-checkdir deb-checkuid build-stamp
 	install -d -m0755 '$(DIR)'/bin
 	install -m0755 build-tmp/src/dash '$(DIR)'/bin/dash
 	$(STRIP) -R .comment -R .note '$(DIR)'/bin/dash
+	ln -s dash '$(DIR)'/bin/sh
 	install -d -m0755 '$(DIR)'/usr/share/man/man1/
 	install -m0644 src/dash.1 '$(DIR)'/usr/share/man/man1/dash.1
 	gzip -9 '$(DIR)'/usr/share/man/man1/dash.1
+	ln -s dash.1.gz '$(DIR)'/usr/share/man/man1/sh.1.gz
 	install -d -m0755 '$(DIR)'/usr/share/menu
 	install -m0644 debian/dash.menu '$(DIR)'/usr/share/menu/dash
 	# changelog
