--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,10 @@ Vcs-Git: http://smarden.org/git/dash.git/
 
 Package: dash
 Architecture: any
+Essential: yes
+Priority: required
 Pre-Depends: ${shlibs:Depends}
-Depends: debianutils (>= 2.15)
+Depends: debianutils (>= 2.15), dpkg (>= 1.15.0)
 Description: POSIX-compliant shell
  The Debian Almquist Shell (dash) is a lightweight POSIX-compliant shell
  derived from ash.
