--- a/debian/dash.config
+++ b/debian/dash.config
@@ -35,5 +35,9 @@ if [ "$1" = configure ] && [ -z "$2" ]; then
 	esac
 fi
 
-db_input low dash/sh || true
+if [ "$1" = configure ] && [ -z "$2" ] && dpkg-query -W bash >/dev/null; then
+	db_input high dash/sh || true
+else
+	db_input low dash/sh || true
+fi
 db_go
