--- a/debian/dash.templates.in
+++ b/debian/dash.templates.in
@@ -8,10 +8,15 @@
 # changes should be coordinated with translators and reviewers.
 Template: dash/sh
 Type: boolean
-Default: false
-_Description: Install dash as /bin/sh?
- The default /bin/sh shell on Debian and Debian-based systems is bash.
+Default: true
+_Description: Use dash as the default system shell (/bin/sh)?
+ The system shell is the default command interpreter for shell scripts.
  .
- However, since the default shell is required to be POSIX-compliant,
- any shell that conforms to POSIX, such as dash, can serve as /bin/sh.
- You may wish to do this because dash is faster and smaller than bash.
+ Using dash as /bin/sh will improve the system's overall performance
+ without changing the shell used interactively by the users of this machine.
+# _Description: Install dash as /bin/sh?
+#  The default /bin/sh shell on Debian and Debian-based systems is bash.
+#  .
+#  However, since the default shell is required to be POSIX-compliant,
+#  any shell that conforms to POSIX, such as dash, can serve as /bin/sh.
+#  You may wish to do this because dash is faster and smaller than bash.
