Document "/bin/sh -> dash" NMU changes

--- a/debian/dash.config
+++ b/debian/dash.config
@@ -35,7 +35,9 @@ if [ "$1" = configure ] && [ -z "$2" ]; then
 	esac
 fi
 
+# if "configuring and for the first time and bash is already installed"
 if [ "$1" = configure ] && [ -z "$2" ] && dpkg-query -W bash >/dev/null; then
+	# bash is pulling in dash
 	db_input high dash/sh || true
 else
 	db_input low dash/sh || true
