--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Architecture: any
 Essential: yes
 Priority: required
 Pre-Depends: ${shlibs:Depends}
-Depends: debianutils (>= 2.15), dpkg (>= 1.15.0)
+Depends: debianutils (>= 2.15), dpkg (>= 1.15.0), debconf | debconf-2.0
 Description: POSIX-compliant shell
  The Debian Almquist Shell (dash) is a POSIX-compliant shell derived
  from ash.
