--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,6 @@ CPPFLAGS =$(shell DEB_BUILD_MAINT_OPTIONS=$(DEB_BUILD_MAINT_OPTIONS) \
   dpkg-buildflags --get CPPFLAGS)
 
 BUILD_DATE := $(shell dpkg-parsechangelog | sed -n -e 's/^Date: //p')
-
 DEB_HOST_GNU_TYPE =$(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE =$(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
@@ -50,8 +49,17 @@ configure-stamp: patch-stamp
 	    --host='$(DEB_HOST_GNU_TYPE)')
 	touch configure-stamp
 
+PREINST_OBJECTS = debian/dash.preinst.o debian/dash.preinst-lib.o
+
+$(PREINST_OBJECTS): %.o: %.c debian/dash.preinst.h
+	$(CC) -c -o $@ $(CFLAGS) $<
+
+debian/dash.preinst: $(PREINST_OBJECTS)
+	$(CC) -o debian/dash.preinst $(CFLAGS) $(PREINST_OBJECTS)
+	$(STRIP) -R .comment -R .note debian/dash.preinst
+
 build: build-arch build-indep
-build-arch: deb-checkdir build-stamp
+build-arch: deb-checkdir build-stamp debian/dash.preinst
 build-indep:
 build-stamp: configure-stamp
 	-$(CC) -v
@@ -65,6 +73,7 @@ po-templates-stamp: deb-checkdir
 	touch po-templates-stamp
 
 clean: deb-checkdir deb-checkuid
+	rm -f debian/dash.preinst debian/*.o
 	rm -rf build-tmp
 	test ! -e patch-stamp || \
 	  for i in `ls -1r debian/diff/*.diff || :`; do patch -p1 -R <$$i; done
@@ -72,7 +81,7 @@ clean: deb-checkdir deb-checkuid
 	rm -rf '$(DIR)' '$(DIRA)'
 	rm -f debian/files debian/substvars debian/dash.templates changelog
 
-install: install-indep install-arch
+install: install-indep install-arch debian/dash.preinst
 install-indep: deb-checkdir deb-checkuid
 	rm -rf '$(DIRA)'
 	install -d -m0755 '$(DIRA)'/bin
@@ -106,7 +115,8 @@ binary-indep: install-indep ash.deb
 binary-arch: install-arch po-templates dash.deb
 	# dash
 	rm -f debian/substvars
-	test '$(CC)' != 'gcc' || dpkg-shlibdeps '$(DIR)'/bin/dash
+	test '$(CC)' != 'gcc' || \
+	  dpkg-shlibdeps '$(DIR)'/bin/dash debian/dash.preinst
 	dpkg-gencontrol -isp -pdash -P'$(DIR)'
 	find '$(DIR)' -depth -newermt '$(BUILD_DATE)' -print0 | \
 		xargs -0r touch --no-dereference --date='$(BUILD_DATE)'
