Import Debian changes 0.5.7-3+nmu1
dash (0.5.7-3+nmu1) unstable; urgency=medium

  * Non-maintainer upload.
  * Enable build-hardening flags (closes: #662721).

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dash
 Section: shells
 Priority: optional
 Maintainer: Gerrit Pape <pape@smarden.org>
-Build-Depends: po-debconf
+Build-Depends: po-debconf, dpkg-dev (>= 1.16.1),
 Standards-Version: 3.9.3.0
 Homepage: http://gondor.apana.org.au/~herbert/dash/
 Vcs-Git: http://smarden.org/git/dash.git/
