Import Debian changes 0.5.8-1
dash (0.5.8-1) experimental; urgency=medium

  * new upstream release (closes: #598238).
    * 0003-VAR-Disable-LINENO-support.diff: remove; upstream now has
      configure --disable-lineno option.
  * debian/rules: pass --enable-fnmatch option to configure
    (closes: #763407).
  * debian/po/sr.po: new; [INTL:sr] Serbian cyrillic translation of
    debconf template (thx Zlatan Todoric, closes: #635069).

--- a/config.h.in
+++ b/config.h.in
@@ -28,9 +28,6 @@
 /* Define to 1 if you have the `glob' function. */
 #undef HAVE_GLOB
 
-/* Define to 1 if you have the `imaxdiv' function. */
-#undef HAVE_IMAXDIV
-
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
@@ -154,6 +151,9 @@
 
 /* Version number of package */
 #undef VERSION
+
+/* Define if you build with -DWITH_LINENO */
+#undef WITH_LINENO
 
 /* Define to 1 if on MINIX. */
 #undef _MINIX
