--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,7 @@ DEB_HOST_GNU_TYPE =$(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE =$(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
   CC =$(DEB_HOST_GNU_TYPE)-gcc
+  STRIP =$(DEB_HOST_GNU_TYPE)-strip
 endif
 
 ifneq (,$(findstring diet,$(DEB_BUILD_OPTIONS)))
