Import Debian changes 0.5.8-2.5
dash (0.5.8-2.5) unstable; urgency=low

  * Non-maintainer upload.

  [ Reiner Herrmann ]
  * Improve build reproducibility: set LC_ALL instead of LC_COLLATE to C.

  [ HW42 ]
  * Improve build reproducibility: avoid exec call which embeds different paths
    between different system shells. (Closes: #825643)

--- a/debian/rules
+++ b/debian/rules
@@ -46,7 +46,7 @@ configure-stamp: patch-stamp
 	touch configure
 	(cd build-tmp && CC='$(CC)' \
 	  CFLAGS='$(CFLAGS)' CPPFLAGS='$(CPPFLAGS)' LDFLAGS='$(LDFLAGS)' \
-	  exec ../configure --enable-fnmatch --disable-lineno \
+	  ../configure --enable-fnmatch --disable-lineno \
 	    --host='$(DEB_HOST_GNU_TYPE)')
 	touch configure-stamp
 
