--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Gerrit Pape <pape@smarden.org>
 Build-Depends: po-debconf, dpkg-dev (>= 1.16.1),
 Standards-Version: 3.9.3.0
 Homepage: http://gondor.apana.org.au/~herbert/dash/
-Vcs-Git: http://smarden.org/git/dash.git/
+Vcs-Git: https://salsa.debian.org/debian/dash.git
 
 Package: dash
 Architecture: any
