--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dash
 Section: shells
 Priority: optional
 Maintainer: Gerrit Pape <pape@smarden.org>
-Build-Depends: po-debconf, dpkg-dev (>= 1.16.1),
+Build-Depends: po-debconf, dpkg-dev (>= 1.16.1), debhelper (>= 10)
 Standards-Version: 3.9.3.0
 Homepage: http://gondor.apana.org.au/~herbert/dash/
 Vcs-Git: https://salsa.debian.org/debian/dash.git
