--- a/debian/rules
+++ b/debian/rules
@@ -32,15 +32,11 @@ endif
 DIR =$(shell pwd)/debian/dash
 DIRA =$(shell pwd)/debian/ash
 
-configure: deb-checkdir configure-stamp
-configure-stamp:
-	mkdir -p build-tmp
-	touch configure
-	(cd build-tmp && CC='$(CC)' \
-	  CFLAGS='$(CFLAGS)' CPPFLAGS='$(CPPFLAGS)' LDFLAGS='$(LDFLAGS)' \
-	  ../configure --enable-fnmatch --disable-lineno \
-	    --host='$(DEB_HOST_GNU_TYPE)')
-	touch configure-stamp
+%:
+	dh "$@"
+
+override_dh_auto_configure:
+	dh_auto_configure -- --enable-fnmatch --disable-lineno
 
 PREINST_OBJECTS = debian/dash.preinst.o debian/dash.preinst-lib.o
 
@@ -51,69 +47,11 @@ debian/dash.preinst: $(PREINST_OBJECTS)
 	$(CC) -o debian/dash.preinst $(CFLAGS) $(PREINST_OBJECTS)
 	$(STRIP) -R .comment -R .note debian/dash.preinst
 
-build: build-arch build-indep
-build-arch: deb-checkdir build-stamp debian/dash.preinst
-build-indep:
-build-stamp: configure-stamp
-	-$(CC) -v
-	(cd build-tmp && exec $(MAKE) CFLAGS='$(CFLAGS)' CPPFLAGS='$(CPPFLAGS)' LDFLAGS='$(LDFLAGS)') || \
-	  (cat build-tmp/config.log; exit 1) || exit 1
-	touch build-stamp
+override_dh_auto_build: debian/dash.preinst po-templates
+	dh_auto_build
 
-po-templates: po-templates-stamp
-po-templates-stamp: deb-checkdir
+po-templates:
 	po2debconf debian/dash.templates.in >debian/dash.templates
-	touch po-templates-stamp
 
-clean: deb-checkdir deb-checkuid
-	rm -f debian/dash.preinst debian/*.o
-	rm -rf build-tmp
-	rm -f configure-stamp build-stamp po-templates-stamp
-	rm -rf '$(DIR)' '$(DIRA)'
-	rm -f debian/files debian/substvars debian/dash.templates changelog
-
-install: install-indep install-arch debian/dash.preinst
-install-indep: deb-checkdir deb-checkuid
-	rm -rf '$(DIRA)'
-	install -d -m0755 '$(DIRA)'/bin
-	ln -s dash '$(DIRA)'/bin/ash
-	install -d -m0755 '$(DIRA)'/usr/share/man/man1/
-	ln -s dash.1.gz '$(DIRA)'/usr/share/man/man1/ash.1.gz
-	# changelog
-	test -r changelog || ln -s ChangeLog changelog
-install-arch: deb-checkdir deb-checkuid build-stamp
-	# dash
-	rm -rf '$(DIR)'
-	install -d -m0755 '$(DIR)'/bin
-	install -m0755 build-tmp/src/dash '$(DIR)'/bin/dash
-	$(STRIP) -R .comment -R .note '$(DIR)'/bin/dash
-	ln -s dash '$(DIR)'/bin/sh
-	install -d -m0755 '$(DIR)'/usr/share/man/man1/
-	install -m0644 src/dash.1 '$(DIR)'/usr/share/man/man1/dash.1
-	gzip -9n '$(DIR)'/usr/share/man/man1/dash.1
-	ln -s dash.1.gz '$(DIR)'/usr/share/man/man1/sh.1.gz
-	install -d -m0755 '$(DIR)'/usr/share/menu
-	install -m0644 debian/dash.menu '$(DIR)'/usr/share/menu/dash
-	# changelog
-	test -r changelog || ln -s ChangeLog changelog
-
-binary: binary-indep binary-arch
-binary-indep: install-indep ash.deb
-	dpkg-gencontrol -isp -pash -P'$(DIRA)'
-	find '$(DIRA)' -depth -newermt '$(BUILD_DATE)' -print0 | \
-		xargs -0r touch --no-dereference --date='$(BUILD_DATE)'
-	dpkg -b '$(DIRA)' ..
-binary-arch: install-arch po-templates dash.deb
-	# dash
-	rm -f debian/substvars
-	test '$(CC)' != 'gcc' || \
-	  dpkg-shlibdeps '$(DIR)'/bin/dash debian/dash.preinst
-	dpkg-gencontrol -isp -pdash -P'$(DIR)'
-	find '$(DIR)' -depth -newermt '$(BUILD_DATE)' -print0 | \
-		xargs -0r touch --no-dereference --date='$(BUILD_DATE)'
-	dpkg -b '$(DIR)' ..
-
-.PHONY: configure build build-arch build-indep po-templates clean install install-indep \
-	  install-arch binary binary-indep binary-arch
-
-include debian/implicit
+.PHONY: po-templates  \
+	  override_dh_auto_configure override_dh_auto_build
