--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: dash
 Section: shells
 Priority: optional
 Maintainer: Gerrit Pape <pape@smarden.org>
+Uploaders: Andrej Shadura <andrewsh@debian.org>
 Build-Depends: po-debconf, dpkg-dev (>= 1.16.1), debhelper (>= 10)
 Standards-Version: 3.9.3.0
 Homepage: http://gondor.apana.org.au/~herbert/dash/
