--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Vcs-Git: https://salsa.debian.org/debian/dash.git
 
 Package: dash
 Architecture: any
+Multi-Arch: foreign
 Essential: yes
 Priority: required
 Pre-Depends: ${shlibs:Depends}
