Remove dash.preinst
The preinst had been necessary to unpack dash when /bin/sh was also
included in the bash package, but bash stopped shipping /bin/sh over
six years ago.  Nowadays the preinst seems entirely superfluous and
prevents crossgrades, as well as spitting out noise on upgrades.

Closes: #907132, #890073

Signed-off-by: Sven Joachim <svenjoac@gmx.de>

--- a/debian/rules
+++ b/debian/rules
@@ -25,16 +25,7 @@ endif
 override_dh_auto_configure:
 	dh_auto_configure -- --enable-fnmatch --disable-lineno
 
-PREINST_OBJECTS = debian/dash.preinst.o debian/dash.preinst-lib.o
-
-$(PREINST_OBJECTS): %.o: %.c debian/dash.preinst.h
-	$(CC) -c -o $@ $(CFLAGS) $<
-
-debian/dash.preinst: $(PREINST_OBJECTS)
-	$(CC) -o debian/dash.preinst $(CFLAGS) $(PREINST_OBJECTS)
-	$(STRIP) -R .comment -R .note debian/dash.preinst
-
-override_dh_auto_build: debian/dash.preinst po-templates
+override_dh_auto_build: po-templates
 	dh_auto_build
 
 po-templates:
