--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: po-debconf, dpkg-dev (>= 1.16.1), debhelper (>= 10)
 Standards-Version: 3.9.3.0
 Homepage: http://gondor.apana.org.au/~herbert/dash/
 Vcs-Git: https://salsa.debian.org/debian/dash.git
+Vcs-Browser: https://salsa.debian.org/debian/dash
 
 Package: dash
 Architecture: any
