--- a/debian/rules
+++ b/debian/rules
@@ -1,23 +1,13 @@
 #!/usr/bin/make -f
 
-CC =gcc
-STRIP =strip
+# output every command that modifies files on the build system.
+#DH_VERBOSE = 1
 
 DEB_BUILD_MAINT_OPTIONS =hardening=+all
-CFLAGS =$(shell DEB_BUILD_MAINT_OPTIONS=$(DEB_BUILD_MAINT_OPTIONS) \
-  dpkg-buildflags --get CFLAGS)
-LDFLAGS =$(shell DEB_BUILD_MAINT_OPTIONS=$(DEB_BUILD_MAINT_OPTIONS) \
-  dpkg-buildflags --get LDFLAGS)
-CPPFLAGS =$(shell DEB_BUILD_MAINT_OPTIONS=$(DEB_BUILD_MAINT_OPTIONS) \
-  dpkg-buildflags --get CPPFLAGS)
 
-BUILD_DATE := $(shell dpkg-parsechangelog | sed -n -e 's/^Date: //p')
-DEB_HOST_GNU_TYPE =$(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE =$(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
-  CC =$(DEB_HOST_GNU_TYPE)-gcc
-  STRIP =$(DEB_HOST_GNU_TYPE)-strip
-endif
+# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
 
 ifneq (,$(findstring diet,$(DEB_BUILD_OPTIONS)))
   CC =diet -v -Os gcc
@@ -28,9 +18,6 @@ endif
 ifneq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
   STRIP =: strip
 endif
-
-DIR =$(shell pwd)/debian/dash
-DIRA =$(shell pwd)/debian/ash
 
 %:
 	dh $@
