--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: dash
 Section: shells
 Priority: optional
-Maintainer: Gerrit Pape <pape@smarden.org>
-Uploaders: Andrej Shadura <andrewsh@debian.org>
+Maintainer: Andrej Shadura <andrewsh@debian.org>
+Uploaders: Gerrit Pape <pape@smarden.org>
 Build-Depends: po-debconf, dpkg-dev (>= 1.16.1), debhelper (>= 10)
 Standards-Version: 4.2.1
 Homepage: http://gondor.apana.org.au/~herbert/dash/
