--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: shells
 Priority: optional
 Maintainer: Andrej Shadura <andrewsh@debian.org>
 Uploaders: Gerrit Pape <pape@smarden.org>
-Build-Depends: po-debconf, dpkg-dev (>= 1.16.1), debhelper (>= 10)
+Build-Depends: po-debconf, dpkg-dev (>= 1.16.1), debhelper-compat (= 10)
 Standards-Version: 4.2.1
 Homepage: http://gondor.apana.org.au/~herbert/dash/
 Vcs-Git: https://salsa.debian.org/debian/dash.git
