--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,4 @@
 [DEFAULT]
-debian-branch=debian/master
+debian-branch=debian/unstable
 upstream-branch=upstream/latest
+upstream-vcs-tag=v%(version)s
