--- a/debian/rules
+++ b/debian/rules
@@ -20,7 +20,7 @@ endif
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-fnmatch --disable-lineno
+	dh_auto_configure -- --enable-fnmatch --disable-lineno --disable-glob
 
 override_dh_auto_build: po-templates
 	dh_auto_build
