--- a/debian/rules
+++ b/debian/rules
@@ -5,13 +5,14 @@
 
 DEB_BUILD_MAINT_OPTIONS =hardening=+all
 
-# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
-DPKG_EXPORT_BUILDFLAGS = 1
-include /usr/share/dpkg/default.mk
+include /usr/share/dpkg/architecture.mk
 
 ifeq ($(DEB_HOST_ARCH_OS),hurd)
 DEB_CPPFLAGS_MAINT_APPEND = -DPATH_MAX=4096
 endif
+
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
 
 ifneq (,$(findstring diet,$(DEB_BUILD_OPTIONS)))
   CC =diet -v -Os gcc
