--- a/debian/rules
+++ b/debian/rules
@@ -26,7 +26,7 @@ endif
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		--enable-fnmatch \
+		--disable-fnmatch \
 		--disable-lineno \
 		--disable-glob
 
