Update copyright years

--- a/debian/fill.copyright.blanks.yml
+++ b/debian/fill.copyright.blanks.yml
@@ -13,6 +13,6 @@
      2016, Niels Thykier <niels@thykier.net>
      2017, Adam Borowski <kilobyte@angband.pl>
      2017, Ximin Luo <infinity0@debian.org>
-     2018, 2019, Andrej Shadura <andrewsh@debian.org>
+     2018—2021, Andrej Shadura <andrewsh@debian.org>
   "license": |-
     BSD-3-clause
