Drop obsolete ash package
Nothing in Debian uses /bin/ash anymore.

Closes: #920644

--- a/debian/rules
+++ b/debian/rules
@@ -30,4 +30,9 @@ override_dh_auto_configure:
 		--disable-lineno \
 		--disable-glob
 
+execute_after_dh_auto_install:
+	mkdir -p debian/dash/bin
+	mv debian/*/usr/bin/dash debian/dash/bin
+	rmdir debian/*/usr/bin
+
 .PHONY: override_dh_auto_configure
