--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Standards-Version: 4.2.1
 Homepage: http://gondor.apana.org.au/~herbert/dash/
 Vcs-Git: https://salsa.debian.org/debian/dash.git
 Vcs-Browser: https://salsa.debian.org/debian/dash
+Rules-Requires-Root: no
 
 Package: dash
 Architecture: any
